@@ -1,0 +1,10 @@
+name: test
+tools:
+#   - test
+#   - arachni
+#   - skipfish
+#   - nikto
+   - dirb
+
+menu_name: Test
+parallel: False
